Add assigment group selector. Configure dev prod env

--- a/SnowReports/appsettings.json
+++ b/SnowReports/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "SNReporting": "Server=LT-VIAF-T-CA;Database=Tickets;User ID=sa;Password=Test12345!;"
   },
+  "HostName": "http://localhost:5757",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +10,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedOrigins": "*"
 }
