Replace hardcoded enums with queries to SQL. Refactor

--- a/SnowReports/appsettings.json
+++ b/SnowReports/appsettings.json
@@ -10,5 +10,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedOrigins": "*"
+  "AllowedOrigins": "*",
+  "Assignment_group_v3": "PSS Tech Support"
 }
