--- a/SnowReports/ClientApp/package.json
+++ b/SnowReports/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.0",
     "date-fns": "^2.25.0",
     "http-proxy-middleware": "^0.19.1",
