Add saving filters state in storage

--- a/SnowReports/appsettings.json
+++ b/SnowReports/appsettings.json
@@ -11,5 +11,6 @@
     }
   },
   "AllowedOrigins": "*",
-  "Assignment_group_v3": "PSS Tech Support"
+  "Assignment_group_v3": "PSS Tech Support",
+  "TicketsLevels": "All,1,2"
 }
