--- a/SnowReports/appsettings.json
+++ b/SnowReports/appsettings.json
@@ -11,6 +11,5 @@
     }
   },
   "AllowedOrigins": "*",
-  "Assignment_group_v3": "PSS Tech Support",
-  "TicketsLevels": "All,1,2"
+  "Assignment_group_v3": "PSS Tech Support"
 }
