Add logger, fix styles

--- a/SnowReports/appsettings.json
+++ b/SnowReports/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "SNReporting": "Server=LT-VIAF-T-CA;Database=Tickets;User ID=sa;Password=Test12345!;"
+    "devSNReporting": "Server=LT-VIAF-T-CA;Database=Tickets;User ID=sa;Password=Test12345!;",
+    "SNReporting": "Server=CSS-DB-01-DK1;Database=ServiceNow.Reporting;Integrated Security=true;"
   },
   "HostName": "http://localhost:5757",
   "Logging": {
